[package]
name = "isoimagewriter"
version = "0.1.0"
edition = "2021"
authors = ["ISOImageWriter Rust Port"]
description = "Linux-only dd/ISO image backup and restore utility rewritten from shell scripts."
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
indicatif = "0.17"
thiserror = "1"
flate2 = { version = "1", features = ["gzip"] }
xz2 = "0.1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
walkdir = "2"
dirs = "5"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

